Bug 79571 - Data validity allow blank cells.. does not use a blank cell that is included in the input range
Summary: Data validity allow blank cells.. does not use a blank cell that is included ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:5.5.0 target:7.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-03 04:00 UTC by Kari Tuominen
Modified: 2023-02-15 12:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example of bug (16.09 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-06-03 04:00 UTC, Kari Tuominen
Details
patch that prevents the last entry from being a blank unless explicity selected. (2.53 KB, patch)
2017-06-07 08:35 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kari Tuominen 2014-06-03 04:00:16 UTC
Created attachment 100338 [details]
Example of bug

Allow blank cells selected, as shown on page 51 in LibreOffice 4.1 Calc guide, does not allow to input a blank cell from a selected cell range that consists a blank cell.
In this attached example the Tools > Detective > Mark invalid Data, does not have any action on tis problem.
Comment 1 Jean-Baptiste Faure 2014-06-09 20:10:14 UTC
Thank you for this bug report.
Reproducible since at least LO 4.0.6 under Ubuntu 14.04 x86-64

Best regards. JBF
Comment 2 QA Administrators 2015-07-18 17:44:19 UTC Comment hidden (obsolete)
Comment 3 Jean-Baptiste Faure 2015-07-19 11:11:39 UTC
Still reproducible with LO 5.0.1.0+ built at home under Ubuntu 15.04 x86-64.

Note: works if, instead of using a empty cell, the blank cell contains only a space character.

Best regards. JBF
Comment 4 Cor Nouws 2016-05-25 09:25:11 UTC
same in LibreOffice 3.3.0
Comment 5 Justin L 2017-05-29 09:23:48 UTC
Proposed fix: https://gerrit.libreoffice.org/38124

As a side note, for MSO compatibility, if a blank is the last entry (for example, if an entire column is chosen for validation, but even if a very specific range includes an empty cell as the last cell), then it shouldn't be added to the list. Currently, LO does add a blank entry at the end of the combobox list.

I'm not proposing to make that change, but just making a note of it. The UI team would need to decide whether that is an "error" affecting all of LO, or simply a compatibility issue (which would complicate things a bit). Certainly it could become someone's "regression" in .ods.
Comment 6 Justin L 2017-06-07 08:35:26 UTC
Created attachment 133888 [details]
patch that prevents the last entry from being a blank unless explicity selected.

(In reply to Justin L from comment #5)
> I'm not proposing to make that change, but just making a note of it.
Comment 7 Commit Notification 2017-06-08 00:48:13 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cb444c17ca2834e53a9c5c797bae765f08e40101

tdf#79571 sc FilterSelect: accept empty strings

It will be available in 5.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-02-15 12:27:30 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5c18849cc682a88c4d341fe4c12a69332140a367

tdf#79571, tdf#151794, tdf#153622: sc: Add UItest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.